switch to OS go

--- a/mini/ubuntu/noble/configs/exports.j2
+++ b/mini/ubuntu/noble/configs/exports.j2
@@ -9,3 +9,4 @@ export PATH="$HOME/.cargo/bin:$PATH"
 # Disabled
 # TODO: Allow goenv to use os go on linux machines & enable
 # export PATH="$HOME/.goenv/shims:$PATH"
+export PATH="$PATH:$HOME/go/bin"
