--- a/mini/ubuntu/noble/configs/exports.j2
+++ b/mini/ubuntu/noble/configs/exports.j2
@@ -6,4 +6,6 @@ export EDITOR='nvim';
 # Rust Related
 export PATH="$HOME/.cargo/bin:$PATH"
 
-export PATH="$HOME/.goenv/shims:$PATH"
+# Disabled
+# TODO: Allow goenv to use os go on linux machines & enable
+# export PATH="$HOME/.goenv/shims:$PATH"
